--- a/web/app/themes/tennis-majors-v2/resources/lang/fr_FR.po
+++ b/web/app/themes/tennis-majors-v2/resources/lang/fr_FR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Tennis Majors Nuuk 1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/tennis-majors-v2\n"
 "POT-Creation-Date: 2021-05-17T06:15:15+00:00\n"
-"PO-Revision-Date: 2021-05-17 11:32+0200\n"
+"PO-Revision-Date: 2021-05-17 12:06+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -131,7 +131,7 @@ msgstr "Éditorialiste"
 
 #: app/setup.php:257 app/setup.php:273
 msgid "Expert"
-msgstr "Export"
+msgstr "Expert"
 
 #: app/setup.php:273
 msgid "Motion design"
